<resources>
    <string name="app_name">NCERT Class 10 Solutions With Quiz Game</string>
    <string name="quizz">Quiz</string>
    <string name="super_tridents">Super Tridents</string>
    <string name="image">image</string>
    <string name="coins">Coins</string>
    <string name="quizz_master">Quizz Master</string>
    <string name="start_game">Start Game</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pref_previously_started">pref</string>
</resources>